--- a/index.html
+++ b/index.html
@@ -10,21 +10,23 @@
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+  <link rel="stylesheet" href="css/20880115.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Changa+One" type="text/css"> <!-- use google font must add link-->
 </head>
 
 <body>
   <!--header-->
   <header class="container">
-    <nav class="navbar navbar-expand-sm navbar-light bg-light">
-      <a class="navbar-brand" href="#">
+    <nav class="navbar navbar-expand-sm navbar-light px-0"> <!-- navbar cua bootstrap;  px: padding(le cua khung ben ngoai)-->
+      <a class="navbar-brand" href="#" id="logo">
         <img src="images/logo.png" alt="Ice-cream">
       </a>
-      <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId"
-        aria-controls="collapsibleNavId" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#menu"
+        aria-controls="menu" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="collapsibleNavId">
-        <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+      <div class="collapse navbar-collapse justify-content-end" id="menu">
+        <ul class="navbar-nav mt-2 mt-lg-0"> <!-- margin right auto-->
           <li class="nav-item active">
             <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
           </li>
@@ -42,26 +44,32 @@
           </li>
 
         </ul>
-        <form class="form-inline my-2 my-lg-0">
-          <input class="form-control mr-sm-2" type="text" placeholder="Search">
-          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+        <form class="form-inline my-2 my-lg-0" id="frm-search">
+        <div class="input-group input-group sm">
+          <input class="form-control" type="text" placeholder="Search" id="search-word">
+          <div class="input-group-append">
+            <button class="btn" type="submit" id="btn-search"></button>
+          </div> 
+        </div>
         </form>
-        <a href="#"><img src="images/twitter.png" alt=""></a>
-        <a href="#"><img src="images/facebook.png" alt=""></a>
+        <div id="social">
+          <a href="#" class="btn twitter"></a>
+          <a href="#" class="btn facebook"></a>
+        </div>
       </div>
     </nav>
   </header>
   <!--header-->
 
   <!--banner-->
-  <div class="container-fluid">
+  <div class="container-fluid" id="banner">
     <div class="container; text-center">
     <h4>Tasty cakes and ice-cream <br> for everyone</h4>
     <div>
-      <a href="#">see our menu</a>
+      <a id="btn-menu" href="#">see our menu</a>
     </div>
-    <ul>
-      <li><span>0</span></li>
+    <ul id="dots">
+      <li class="active"><span>0</span></li>
       <li><span>1</span></li>
       <li><span>2</span></li>
     </ul>
@@ -72,46 +80,46 @@
 
   <!--main-->
   <div class="container">
-  <div class="row">
+  <div class="row my-5">
     <div class="col-md-3 col-sm-6 text-center">
       <img src="images/icon-1.png" alt="">
       <h4>Coffee</h4>
-      <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</div>
-      <a href="#">Read more</a>
+      <div class="pb-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</div>
+      <a class="readmore" href="#">Read more</a>
     </div>
     <div class="col-md-3 col-sm-6 text-center">
       <img src="images/icon-2.png" alt="">
-      <h4>Drinks</h4>
-      <div>Cumque necessitatibus eos, pariatur quasi suscipit fugit porro?</div>
-      <a href="#">Read more</a>
+      <h4 >Drinks</h4>
+      <div class="pb-2">Cumque necessitatibus eos, pariatur quasi suscipit fugit porro?</div>
+      <a class="readmore" href="#">Read more</a>
     </div>
     <div class="col-md-3 col-sm-6 text-center">
       <img src="images/icon-3.png" alt="">
       <h4>Cakes</h4>
-      <div>Pariatur saepe, libero nulla culpa reiciendis labore unde.</div>
-      <a href="#">Read more</a>
+      <div class="pb-2">Pariatur saepe, libero nulla culpa reiciendis labore unde.</div>
+      <a class="readmore" href="#">Read more</a>
     </div>
     <div class="col-md-3 col-sm-6 text-center">
       <img src="images/icon-4.png" alt="">
       <h4>Ice-creams</h4>
-      <div>Voluptas asperiores modi, quae animi consequatur quasi unde?</div>
+      <div class="pb-2">Voluptas asperiores modi, quae animi consequatur quasi unde?</div>
       <a href="#">Read more</a>
     </div>
   </div>
 </div>
   <!--main-->
   <!--about us-->
-  <div class="container-fluid">
+  <div class="container-fluid about py-4">
     <div class="container">
         <div class="row">
             <div class="col-md-9">
-            <h3>About Us</h3>
+            <h3 class="text-white">About Us</h3>
             <div>
                 <img src="images/icon-about.png" alt="">
                 <div>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reprehenderit cupiditate earum unde, itaque vel,
                   iste quasi magnam saepe ex animi voluptatibus commodi amet dolor natus a doloremque nostrum culpa
                   perspiciatis?</div>
-                <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis repellat rerum reiciendis corporis esse
+                <div class="pt-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis repellat rerum reiciendis corporis esse
                   quae eveniet animi obcaecati beatae ex. <a href="#">Read more</a></div>
             </div>
             </div>
