--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 <html lang="en">
 
@@ -12,13 +11,18 @@
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="css/20880115.css">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Changa+One" type="text/css"> <!-- use google font must add link-->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Changa+One" type="text/css">
+  <link rel="stylesheet" href="css/banner.css">
+
+
+  <!-- use google font must add link-->
 </head>
 
 <body>
   <!--header-->
   <header class="container">
-    <nav class="navbar navbar-expand-sm navbar-light px-0"> <!-- navbar cua bootstrap;  px: padding(le cua khung ben ngoai)-->
+    <nav class="navbar navbar-expand-sm navbar-light px-0">
+      <!-- navbar cua bootstrap;  px: padding(le cua khung ben ngoai)-->
       <a class="navbar-brand" href="#" id="logo">
         <img src="images/logo.png" alt="Ice-cream">
       </a>
@@ -27,31 +31,32 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse justify-content-end" id="menu">
-        <ul class="navbar-nav mt-2 mt-lg-0"> <!-- margin right auto-->
+        <ul class="navbar-nav mt-2 mt-lg-0">
+          <!-- margin right auto-->
           <li class="nav-item active">
-            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
+            <a class="nav-link" href="about.html">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Menu</a>
+            <a class="nav-link" href="menu.html">Menu</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Blog</a>
+            <a class="nav-link" href="blog.html">Blog</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Contacts</a>
+            <a class="nav-link" href="contact.html">Contacts</a>
           </li>
 
         </ul>
         <form class="form-inline my-2 my-lg-0" id="frm-search">
-        <div class="input-group input-group sm">
-          <input class="form-control" type="text" placeholder="Search" id="search-word">
-          <div class="input-group-append">
-            <button class="btn" type="submit" id="btn-search"></button>
-          </div> 
-        </div>
+          <div class="input-group input-group sm">
+            <input class="form-control" type="text" placeholder="Search" id="search-word">
+            <div class="input-group-append">
+              <button class="btn" type="submit" id="btn-search"></button>
+            </div>
+          </div>
         </form>
         <div id="social">
           <a href="#" class="btn twitter"></a>
@@ -65,15 +70,15 @@
   <!--banner-->
   <div class="container-fluid" id="banner">
     <div class="container; text-center">
-    <h4>Tasty cakes and ice-cream <br> for everyone</h4>
-    <div>
-      <a id="btn-menu" href="#">see our menu</a>
-    </div>
-    <ul id="dots">
-      <li class="active"><span>0</span></li>
-      <li><span>1</span></li>
-      <li><span>2</span></li>
-    </ul>
+      <h4 class="text-white">Tasty cakes and ice-cream <br> for everyone</h4>
+      <div>
+        <a id="btn-menu" href="#">see our menu</a>
+      </div>
+      <ul id="dots">
+        <li class="active"><span>0</span></li>
+        <li><span>1</span></li>
+        <li><span>2</span></li>
+      </ul>
 
     </div>
   </div>
@@ -81,100 +86,88 @@
 
   <!--main-->
   <div class="container">
-  <div class="row my-5">
-    <div class="col-md-3 col-sm-6 text-center">
-      <img src="images/icon-1.png" alt="">
-      <h4>Coffee</h4>
-      <div class="pb-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</div>
-      <a class="readmore" href="#">Read more</a>
-    </div>
-    <div class="col-md-3 col-sm-6 text-center">
-      <img src="images/icon-2.png" alt="">
-      <h4 >Drinks</h4>
-      <div class="pb-2">Cumque necessitatibus eos, pariatur quasi suscipit fugit porro?</div>
-      <a class="readmore" href="#">Read more</a>
-    </div>
-    <div class="col-md-3 col-sm-6 text-center">
-      <img src="images/icon-3.png" alt="">
-      <h4>Cakes</h4>
-      <div class="pb-2">Pariatur saepe, libero nulla culpa reiciendis labore unde.</div>
-      <a class="readmore" href="#">Read more</a>
-    </div>
-    <div class="col-md-3 col-sm-6 text-center">
-      <img src="images/icon-4.png" alt="">
-      <h4>Ice-creams</h4>
-      <div class="pb-2">Voluptas asperiores modi, quae animi consequatur quasi unde?</div>
-      <a href="#">Read more</a>
+    <div class="row my-5" id="products">
+     
+ 
     </div>
   </div>
-</div>
   <!--main-->
   <!--about us-->
   <div class="container-fluid about py-4">
     <div class="container">
-        <div class="row">
-            <div class="col-md-9">
-            <h3 class="text-white">About Us</h3>
-            <div>
-                <img src="images/icon-about.png" alt="">
-                <div>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reprehenderit cupiditate earum unde, itaque vel,
-                  iste quasi magnam saepe ex animi voluptatibus commodi amet dolor natus a doloremque nostrum culpa
-                  perspiciatis?</div>
-                <div class="pt-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis repellat rerum reiciendis corporis esse
-                  quae eveniet animi obcaecati beatae ex. <a href="#">Read more</a></div>
-            </div>
-            </div>
-              <div class="col-md-3">
-                <form action="post">
-                  <h3>Newsletter <br>Sign Up</h3>
-                  <div>Please, write an e-mail:</div>
-                  <div><input type="text" name="e-mail" id="email"></div>
-                  <button type="submit">SIGN UP</button>
-                </form>
-              </div>
+      <div class="row">
+        <div class="col-md-9">
+          <h3 class="text-white">About Us</h3>
+          <div>
+            <img src="images/icon-about.png" alt="">
+            <div>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reprehenderit cupiditate earum unde, itaque
+              vel,
+              iste quasi magnam saepe ex animi voluptatibus commodi amet dolor natus a doloremque nostrum culpa
+              perspiciatis?</div>
+            <div class="pt-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis repellat rerum reiciendis
+              corporis esse
+              quae eveniet animi obcaecati beatae ex. <a href="#">Read more</a></div>
           </div>
+        </div>
+        <div class="col-md-3">
+          <form action="post" id="frm-signup">
+            <h3>Newsletter <br>Sign Up</h3>
+            <div>Please, write an e-mail:</div>
+            <div><input type="text" name="e-mail" id="email"></div>
+            <button type="submit">SIGN UP</button>
+          </form>
+        </div>
       </div>
+    </div>
   </div>
 
   <!--NEWS-->
-  <div>
+  <div class="container py-5">
     <h3>News</h3>
     <div class="row">
       <div class="col">
-        <div>
-          <div>25. <br>Dec. </div>
-          <a href="#">Read more</a>
-        </div>
-        <div>
-          <h4>Accumsanet</h4>
-          <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</div>
-        </div>
-
-      </div>
-
-      <div class="col">
-        <div>
-          <div>25. <br>Dec. </div>
-          <a href="#">Read more</a>
-        </div>
-        <div>
-          <h4>Accumsanet</h4>
-          <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</div>
+        <div class="row">
+          <div class="col-sm=4">
+            <div class="date">25. <br>Dec. </div>
+            <a href="#" class="readmore">Read more</a>
+          </div>
+          <div class="col-sm-8">
+            <h4>Accumsanet</h4>
+            <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</div>
+          </div>
         </div>
 
       </div>
 
       <div class="col">
-        <div>
-          <div>25. <br>Dec. </div>
-          <a href="#">Read more</a>
-        </div>
-        <div>
-          <h4>Accumsanet</h4>
-          <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</div>
+        <div class="row">
+          <div class="col-sm=4">
+            <div class="date">25. <br>Dec. </div>
+            <a href="#" class="readmore">Read more</a>
+          </div>
+          <div class="col-sm-8">
+            <h4>Accumsanet</h4>
+            <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</div>
+          </div>
         </div>
 
       </div>
+
+      <div class="col">
+        <div class="row">
+          <div class="col-sm=4">
+            <div class="date">25. <br>Dec. </div>
+            <a href="#" class="readmore">Read more</a>
+          </div>
+          <div class="col-sm-8">
+            <h4>Accumsanet</h4>
+            <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</div>
+          </div>
+        </div>
+
+      </div>
+
+
 
 
     </div>
@@ -182,38 +175,67 @@
   <!--news-->
 
   <!--footer-->
-  <footer>
+  <footer class="container-fluid">
     <nav>
       <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Menu</a></li>
-        <li><a href="#">Blog</a></li>
-        <li><a href="#">Contacts</a></li>
+        <li class="active"><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="menu.html">Menu</a></li>
+        <li><a href="blog.html">Blog</a></li>
+        <li><a href="contact.html">Contacts</a></li>
       </ul>
     </nav>
     <div>
-      Ice-cream &copy; 2019 | <a href="#">Privacy policy</a>
+      Ice-crea m &copy; 2019 | <a href="#" class="text-uppercase">Privacy policy</a>
     </div>
   </footer>
 
   <!--footer-->
 
-
-
-
-
-
-
-
   <!-- Optional JavaScript -->
-  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-  <script src="js/jquery-3.3.1.slim.min.js"></script>
+  <!-- jQuery first, then Popper.js, then Bootstrap JS 
+  jQuery 3 slim version doesn't support ajax.-->
+
+  <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script> 
   <script src="js/popper.min.js"></script>
-  <script src="js/bootstrap.min.js"></script>
+  <script src="js/bootstrap.min.js"></script> 
+  <script src="js/handlebars-v4.7.7.js"> </script>
+  <script id="products-template" type="text/x-handlebars-template">
+    {{#each data}}
+    <div class="col-md-3 col-sm-6 text-center">
+      <img src="{{thumbpath}}" alt="">
+      <h4>{{name}}</h4>
+      <div class="pb-2">{{summary}}</div>
+      <a class="readmore" href="#">Read more</a>
+    </div>  
+     {{/each}}
+
+
+  </script>
+
+  <script>
+    $(document).ready(function() {     // sau khi web load xong thi moi thuc hien ham nay
+      $.ajax({  // ham jquery goi api
+        url: 'https://web1-api.herokuapp.com/api/products',
+        cache: false,   // moi lan lay data la lay moi
+        success: function(data) {
+          let jsonData = {
+            data: data
+          };
+          let target = $('#products'); // get sp co id product
+          let source = $('#products-template').html();
+          let template = Handlebars.compile(source);
+          $(target).html(template(jsonData));
+
+        }
+        
+      });
+
+    });
+  </script>
+
+
+
 </body>
 
 </html>
-
-
-
