--- a/index.html
+++ b/index.html
@@ -209,9 +209,9 @@
       <a class="readmore" href="#">Read more</a>
     </div>  
      {{/each}}
-
-
   </script>
+
+  <script>   </script>
 
   <script>
     $(document).ready(function() {     // sau khi web load xong thi moi thuc hien ham nay
