--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <header class="container">
     <nav class="navbar navbar-expand-sm navbar-light px-0">
       <!-- navbar cua bootstrap;  px: padding(le cua khung ben ngoai)-->
-      <a class="navbar-brand" href="#" id="logo">
+      <a class="navbar-brand" href="index.html" id="logo">
         <img src="images/logo.png" alt="Ice-cream">
       </a>
       <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#menu"
@@ -142,7 +142,7 @@
       </ul>
     </nav>
     <div>
-      Ice-crea m &copy; 2019 | <a href="#" class="text-uppercase">Privacy policy</a>
+      Ice-cream &copy; 2019 | <a href="#" class="text-uppercase">Privacy policy</a>
     </div>
   </footer>
 
